namespace TripSplit.BusinessLogic.Models;

// Категория траты
public enum ExpenseType
{
    Food,
    Transport,
    Accommodation,
    Entertainment,
    Other
}
