@startuml ExpenseRepository
title L4 — ExpenseRepository (Data Access, Npgsql / ADO.NET)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 30
skinparam ranksep 45

package "TripSplit.BusinessLogic" as BL {
    interface IExpenseRepository {
        + GetByIdAsync(id): Task<Expense?>
        + GetByTripAsync(tripId): Task<IReadOnlyList<Expense>>
        + AddAsync(expense): Task
        + UpdateAsync(expense): Task
        + DeleteAsync(id): Task
    }

    class Expense <<Domain Entity>> {
        + Id, TripId, PayerId: Guid
        + ReceiptId: Guid?
        + Name: string
        + Type: ExpenseType
        + Value, Discount: decimal
        + ConsumerIds: List<Guid>
    }

    enum ExpenseType {
        Food
        Transport
        Accommodation
        Entertainment
        Other
    }

    Expense --> ExpenseType
}

package "TripSplit.DataAccess" as DA {

    package "Repositories" as REP {
        class ExpenseRepository <<Repository>> {
            - _factory: IDbConnectionFactory
            + ExpenseRepository(factory)
            + GetByIdAsync(id): Task<Expense?>
            + GetByTripAsync(tripId): Task<IReadOnlyList<Expense>>
            + AddAsync(expense): Task
            + UpdateAsync(expense): Task
            + DeleteAsync(id): Task
            - LoadRowAsync(...)
            - LoadConsumersAsync(...)
            - ReplaceConsumersAsync(...)
        }
    }

    package "Mapping" as MAP {
        class ExpenseMapper <<Static>> {
            + {static} Columns: string
            + {static} ReadRow(reader): Row
            + {static} ToDomain(row, consumers): Expense
            + {static} ToDbType(type): string
        }
        class "Row" as ExpenseRow <<record struct>> {
            + Id, TripId, PayerId: Guid
            + ReceiptId: Guid?
            + Name: string
            + Type: ExpenseType
            + Value, Discount: decimal
        }
        ExpenseMapper ..> ExpenseRow : builds
    }

    package "Infrastructure" as INF {
        interface IDbConnectionFactory {
            + OpenAsync(ct): Task<DbConnection>
        }

        class NpgsqlConnectionFactory <<PostgreSQL>> {
            - _connectionString: string
            + OpenAsync(ct): Task<DbConnection>
        }

        class DatabaseInitializer {
            - _factory: IDbConnectionFactory
            + InitializeAsync(ct): Task
        }

        NpgsqlConnectionFactory ..|> IDbConnectionFactory
        DatabaseInitializer --> IDbConnectionFactory

        package "Exceptions" as EXC {
            class RepositoryException <<Exception>>
            class EntityNotFoundException <<Exception>>
            class DuplicateKeyException <<Exception>>
            EntityNotFoundException --|> RepositoryException
            DuplicateKeyException  --|> RepositoryException
        }
    }
}

package "Npgsql (внешний ADO.NET драйвер)" as NP <<External>> {
    class NpgsqlConnection
    class DbTransaction
    class PostgresException <<Exception>> {
        + SqlState: string
    }
}

' — реализация интерфейса из BusinessLogic (Dependency Inversion, SOLID)
ExpenseRepository ..|> IExpenseRepository

' — зависимости репозитория
ExpenseRepository --> IDbConnectionFactory : depends on\n(DIP)
ExpenseRepository ..> ExpenseMapper : uses
ExpenseRepository ..> DbTransaction : opens tx\n(expenses + expense_consumers)
ExpenseRepository ..> Expense : produces / consumes

' — обработка ошибок Npgsql
ExpenseRepository ..> PostgresException : catches
ExpenseRepository ..> DuplicateKeyException : throws (23505)
ExpenseRepository ..> EntityNotFoundException : throws (rows=0)
ExpenseRepository ..> RepositoryException : throws (other)

' — фабрика создаёт реальные подключения драйвера
NpgsqlConnectionFactory ..> NpgsqlConnection : creates

' — маппер собирает Expense
ExpenseMapper ..> Expense : builds

@enduml
